--- a/Modulos/Login/vista/registro.html
+++ b/Modulos/Login/vista/registro.html
@@ -11,7 +11,10 @@
                 Correo: <input type="email" name="email" placeholder="Correo electronico" required><br><br>
                 Contraseña: <input type="password" name="password" placeholder="Contraseña" required><br><br>
                 <button type="submit">Registrarse </button>
-                 <input type="button" value="Iniciar session" onclick="location.href='/'">
+                 <input type="button" value="Iniciar sesion" onclick="location.href='/'">
             </form>
+            <br><br>
+            <br><br>
+           
         </body>
     </html>         
