--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -9,14 +9,30 @@
     
     <form action="/updateP" method="post">
         <h1>Datos Personales</h1>
-        Nombre: <input type="text" name="username"  value="" required><br><br>
-        Telefono: <input type="number" name=phone value="" required><br><br>
-        Correo: <input type="email" name="email" value="" required><br><br>
-        Contraseña: <input type="password" name="password" value="" required><br><br>
-        <button type="submit">Editar </button>
+        Nombre: <input type="text" name="username" id="username"   required><br><br>
+        Telefono: <input type="number" name=phone id="phone"  required><br><br>
+        Correo: <input type="email" name="email" id="email" required><br><br>
+        Contraseña: <input type="password" name="password" id="password" required><br><br>
+        <button type="submit">Editar</button>
     </form>
     <br><br>
     <br><br>
     <button type="submit" onclick="location.href='/'">Cerrar sesion</button>
+
+    <script>    
+    const userid = 1;
+
+    async function cargardatos(){
+        const res = await fetch('//http://127.0.0.1:8000/login/updateP/${id}' );
+        const data = await res.json();
+
+        document.getElementById('username').value = data.username;
+        document.getElementById('phone').value = data.phone;    
+        document.getElementById('email').value = data.email;
+        document.getElementById('password').value = data.password;
+
+    }
+    cargardatos();
+</script>
 </body>
 </html>
