--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -3,36 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfil</title>
 </head>
 <body>
     
     <form action="/updateP" method="post">
         <h1>Datos Personales</h1>
-        Nombre: <input type="text" name="username" id="username"   required><br><br>
-        Telefono: <input type="number" name=phone id="phone"  required><br><br>
-        Correo: <input type="email" name="email" id="email" required><br><br>
-        Contraseña: <input type="password" name="password" id="password" required><br><br>
+<input type="hidden" name="id" value="{id}">
+Nombre: <input type="text" name="username" value="{nombre}" required><br><br>
+Telefono: <input type="number" name="phone" value="{telefono}" required><br><br>
+Correo: <input type="email" name="email" value="{correo}" required><br><br>
+Contraseña: <input type="password" name="password" value="{password}" required><br><br>
         <button type="submit">Editar</button>
     </form>
     <br><br>
-    <br><br>
-    <button type="submit" onclick="location.href='/'">Cerrar sesion</button>
+    <button type="submit" onclick="location.href='/'">Cerrar sesión</button>
 
-    <script>    
-    const userid = 1;
-
-    async function cargardatos(){
-        const res = await fetch('//http://127.0.0.1:8000/login/updateP/${id}' );
-        const data = await res.json();
-
-        document.getElementById('username').value = data.username;
-        document.getElementById('phone').value = data.phone;    
-        document.getElementById('email').value = data.email;
-        document.getElementById('password').value = data.password;
-
-    }
-    cargardatos();
-</script>
+    
 </body>
 </html>
