--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -14,17 +14,17 @@
     Telefono: <input type="number" name="phone" id="phone" required><br><br>
     Correo: <input type="email" name="email" id="email" required><br><br>
     Contraseña: <input type="password" name="password" id="password" required><br><br>
-    <button type="submit">Editar</button>
+    <button type="submit">Editar</button><br><br>
+    
 </form>
-
-
+<input type="button" value="Cerrar sesion" onclick="location.href='/'">
 
 <script>
-    // 1. Obtener id del query string
+    
     const params = new URLSearchParams(window.location.search);
     const userId = params.get('id');
 
-    // 2. Traer datos del usuario
+
     fetch(`/get_user/${userId}`)
         .then(res => res.json())
         .then(data => {
