--- a/Modulos/categoria/vista/categoria.html
+++ b/Modulos/categoria/vista/categoria.html
@@ -15,7 +15,7 @@ table, th, td {
 </style>
 
 <body>
-<<<<<<< HEAD
+
     <h1>Modulo de Categorias</h1>
     <form action="/category/create" method="post">
         <input type="text" name="name" placeholder="Nombre de la categoria" required>
@@ -26,8 +26,7 @@ table, th, td {
         <br>
     </form>
 
-    <button type="submit">Guardar</button>
-    <button type="submit">Guardar</button>
+    <input type="button" value="Cerrar sesion" onclick="location.href='/'">
 
 
     <table style="width: 30%">
@@ -43,10 +42,7 @@ table, th, td {
             <td>3</td>
             <td>4</td>
         </tr>
-    </table>
-=======
-    
->>>>>>> 5af801b4090b5779567352c23c0c55dc3c84266c
+    </table> 
 </body>
 
 </html>
