--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -19,6 +19,7 @@
 
 </form>
 <input type="button" value="Cerrar sesion" onclick="location.href='/'">
+<input type="button" value="Categorias" onclick="location.href='/category'">
 
 <script>
     
