--- a/Modulos/categoria/vista/categoria.html
+++ b/Modulos/categoria/vista/categoria.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Categorías</title>
 </head>
-
-<style>
-table, th, td {
-  border:1px solid black;
-  text-align: center;
-}
-</style>
-
 <body>
+    <h1>Módulo de Categorías</h1>
 
-    <h1>Modulo de Categorias</h1>
-    <form action="/category/create" method="post">
-        <input type="text" name="name" placeholder="Nombre de la categoria" required>
-        <br>
-        <br>
+    <form action="/category" method="post">
+        <input type="number" name="id" placeholder="ID" required> <br><br>
+        <input type="text" name="name" placeholder="Nombre de la categoría" required> <br><br>
         <button type="submit">Guardar</button>
-        <br>
-        <br>
     </form>
 
+
+
+    <h2>Lista de Categorías</h2>
+    <table border="1" style="width:40%">
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Acción</th>
+        </tr>
+        {{categorias}}
+    </table>
+
     <input type="button" value="Cerrar sesion" onclick="location.href='/'">
+    <input type="button" value="Categorias" onclick="location.href='/category'">
 
-
-    <table style="width: 30%">
-        <tr>
-            <th>C_Id</th>
-            <th>C_Nombre</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>4</td>
-        </tr>
-    </table> 
 </body>
-
 </html>
