--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -18,8 +18,10 @@
 
 
 </form>
+
 <input type="button" value="Cerrar sesion" onclick="location.href='/'">
 <input type="button" value="Categorias" onclick="location.href='/category'">
+<input type="button" value="Carrito" onclick="location.href='/cart/list'">
 
 <script>
     
