--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -21,7 +21,7 @@
 
 <input type="button" value="Cerrar sesion" onclick="location.href='/'">
 <input type="button" value="Categorias" onclick="location.href='/category'">
-<input type="button" value="Carrito" onclick="location.href='/cart/list'">
+<input type="button" value="Carrito" onclick="location.href='/cart'">
 
 <script>
     
