--- a/Modulos/carrito_compras/vista/carrito.html
+++ b/Modulos/carrito_compras/vista/carrito.html
@@ -127,7 +127,7 @@
         }
     </script>
 
-    <script>
+    <!-- <script>
     function eliminarProducto(id) {
         if (confirm("¿Seguro que deseas eliminar este producto?")) {
             fetch(`delete_item/${id}`, {   // <-- aquí el slash es clave
@@ -144,16 +144,16 @@
             .catch(err => console.error("Error:", err));
         }
     }
-</script>
+</script> -->
 
 
 
 
-<!-- Botón Comprar Todo -->
-<button type="button" class="btn btn-comprar" onclick="comprarTodo()">Comprar Todo</button>
+<!-- Botón Comprar Todo
+<button type="button" class="btn btn-comprar" onclick="comprarTodo()">Comprar Todo</button>-->
 
 <!-- Aquí mostramos la factura (puede ser un modal o un div oculto) -->
-<div id="factura" style="display:none; border:1px solid #ccc; padding:15px; margin-top:15px;">
+<!-- <div id="factura" style="display:none; border:1px solid #ccc; padding:15px; margin-top:15px;">
     <h2>Factura Electrónica</h2>
     <table border="1" style="width:100%; text-align:center;">
         <thead>
@@ -172,7 +172,7 @@
 <br>
 <br>
 
-<button type="button" class="btn btn-salir" onclick="location.href='/'">Cerrar sesión</button>
+<button type="button" class="btn btn-salir" onclick="location.href='/'">Cerrar sesión</button> --> 
 
 </body>
 </html>
