--- a/Modulos/carrito_compras/vista/carrito.html
+++ b/Modulos/carrito_compras/vista/carrito.html
@@ -172,7 +172,7 @@
 <br>
 <br>
 
-<button type="button" class="btn btn-salir" onclick="location.href='/'">Cerrar sesión</button>
+   <button onclick="location.href='/view_product'">Volver</button>
 
 </body>
 </html>
