--- a/Modulos/categoria/vista/categorias.html
+++ b/Modulos/categoria/vista/categorias.html
@@ -27,7 +27,10 @@
             <!-- Aquí se insertan los datos -->
 
         </tbody>
+        
     </table>
+     
+
 
     <script>
         fetch("List_Category")  // Llamada al endpoint JSON
@@ -50,8 +53,8 @@
     </script>
 
     <br>
+       <button onclick="location.href='/view_product'">Volver</button>
     <br>
-    <input type="button" value="Cerrar sesion" onclick="location.href='/'">
 
 
 
