--- a/Modulos/Login/vista/perfil.html
+++ b/Modulos/Login/vista/perfil.html
@@ -14,14 +14,14 @@
     Telefono: <input type="number" name="phone" id="phone" required><br><br>
     Correo: <input type="email" name="email" id="email" required><br><br>
     Contraseña: <input type="password" name="password" id="password" required><br><br>
-    <button type="submit">Editar</button><br><br>
+    <button type="submit">Actualizar</button><br><br>
 
 
 </form>
 
 <input type="button" value="Cerrar sesion" onclick="location.href='/'">
-<input type="button" value="Categorias" onclick="location.href='/category'">
-<input type="button" value="Carrito" onclick="location.href='/cart'">
+<input type="button" value="Productos" onclick="location.href='/view_product'">
+
 
 <script>
     
