--- a/Modulos/carrito_compras/vista/prueba1.html
+++ b/Modulos/carrito_compras/vista/prueba1.html
@@ -1,42 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<!-- Supongamos que tienes un producto con id, nombre y precio -->
+<div class="producto">
+  <p>Nombre: Camiseta</p>
+  <p>Precio: $50</p>
+  <button onclick="agregarAlCarrito(1, 'Camiseta', 50)">Agregar al carrito</button>
+</div>
 
+<!-- Contenedor para mostrar los productos en el carrito -->
+<div id="carrito"></div>
 
-<style>
-table, th, td {
-  border:1px solid black;
-}
-</style>
+<script>
+  function agregarAlCarrito(id, nombre, precio) {
+    const data = {
+      id: id,
+      articulo: nombre,
+      precio: precio,
+      cantidad: 1
+    };
 
-</head>
-<body>
+    fetch("/add_to_cart", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(data)
+    })
+    .then(res => res.json())
+    .then(respuesta => {
+      alert(respuesta.message);
+      mostrarCarrito();
+    })
+    .catch(error => console.error("Error:", error));
+  }
 
-<h2>TH elements define table headers</h2>
-
-<table style="width:100%">
-  <tr>
-    <th>Person 1</th>
-    <th>Person 2</th>
-    <th>Person 3</th>
-  </tr>
-  <tr>
-    <td>Emil</td>
-    <td>Tobias</td>
-    <td>Linus</td>
-  </tr>
-  <tr>
-    <td>16</td>
-    <td>14</td>
-    <td>10</td>
-  </tr>
-</table>
-
-<p>To understand the example better, we have added borders to the table.</p>
-
-</body>
-</html>
-
+  // Mostrar carrito
+  function mostrarCarrito() {
+    fetch("/cart")
+      .then(res => res.json())
+      .then(data => {
+        let carritoHTML = "<h3>Carrito</h3><ul>";
+        data.forEach(item => {
+          carritoHTML += `<li>${item.articulo} - ${item.cantidad} x $${item.precio}</li>`;
+        });
+        carritoHTML += "</ul>";
+        document.getElementById("carrito").innerHTML = carritoHTML;
+      });
+  }
+</script>
