--- a/Modulos/carrito_compras/vista/carrito.html
+++ b/Modulos/carrito_compras/vista/carrito.html
@@ -35,7 +35,7 @@
     // Función para cargar los productos del carrito
     async function cargarCarrito() {
         try {
-            const response = await fetch("/cart/list/data"); // endpoint de tu API
+            const response = await fetch("/view_carrito/data"); // endpoint de tu API
             const carrito = await response.json();
 
             let rows = "";
@@ -45,11 +45,11 @@
                         <td>${c.Car_id}</td>
                         <td>${c.User_name}</td>
                         <td>${c.Product_name}</td>
-                        <td>${c.User_id}</td>
-                        <td>$${c.User_id}</td>
-                        <td>${c.User_id}</td>
+                        <td>${c.Car_cantidad}</td>
+                        <td>$${c.Product_price}</td>
+                        <td>${c.Car_subTotal}</td>
                         <td>
-                            <button class="btn btn-danger" onclick="eliminarProducto(${c.id})">Eliminar</button>
+                            <button class="btn btn-danger" onclick="eliminarProducto(${c.Car_id})">Eliminar</button>
                         </td>
                     </tr>
                 `;
@@ -64,24 +64,24 @@
     }
 
     // Función para eliminar un producto
-    async function eliminarProducto(id) {
-        if (confirm("¿Seguro que deseas eliminar este producto?")) {
-            try {
-                const res = await fetch(`/cart/${id}`, {
-                    method: "DELETE"
-                });
+    // async function eliminarProducto(id) {
+    //     if (confirm("¿Seguro que deseas eliminar este producto?")) {
+    //         try {
+    //             const res = await fetch(`/cart/${id}`, {
+    //                 method: "DELETE"
+    //             });
 
-                if (res.ok) {
-                    alert("Producto eliminado");
-                    cargarCarrito(); // recargar productos después de eliminar
-                } else {
-                    alert("Error al eliminar producto");
-                }
-            } catch (error) {
-                console.error("Error eliminando producto:", error);
-            }
-        }
-    }
+    //             if (res.ok) {
+    //                 alert("Producto eliminado");
+    //                 cargarCarrito(); // recargar productos después de eliminar
+    //             } else {
+    //                 alert("Error al eliminar producto");
+    //             }
+    //         } catch (error) {
+    //             console.error("Error eliminando producto:", error);
+    //         }
+    //     }
+    // }
 
     // Cuando cargue la página, que se carguen los productos
     window.onload = cargarCarrito;
