--- a/Modulos/carrito_compras/vista/carrito.html
+++ b/Modulos/carrito_compras/vista/carrito.html
@@ -87,7 +87,8 @@
     window.onload = cargarCarrito;
 </script>
 
+<button onclick="window.history.back()">⬅️ Regresar</button>
 
-               
+              
 </body>
 </html>
