--- a/Modulos/carrito_compras/vista/carrito.html
+++ b/Modulos/carrito_compras/vista/carrito.html
@@ -64,24 +64,24 @@
     }
 
     // Función para eliminar un producto
-    // async function eliminarProducto(id) {
-    //     if (confirm("¿Seguro que deseas eliminar este producto?")) {
-    //         try {
-    //             const res = await fetch(`/cart/${id}`, {
-    //                 method: "DELETE"
-    //             });
+    async function eliminarProducto(id) {
+        if (confirm("¿Seguro que deseas eliminar este producto del carrito?")) {
+            try {
+                const res = await fetch(`/cart/${id}`, {
+                    method: "DELETE"
+                });
 
-    //             if (res.ok) {
-    //                 alert("Producto eliminado");
-    //                 cargarCarrito(); // recargar productos después de eliminar
-    //             } else {
-    //                 alert("Error al eliminar producto");
-    //             }
-    //         } catch (error) {
-    //             console.error("Error eliminando producto:", error);
-    //         }
-    //     }
-    // }
+                if (res.ok) {
+                    alert("Producto eliminado");
+                    cargarCarrito(); // recargar productos después de eliminar
+                } else {
+                    alert("Error al eliminar producto");
+                }
+            } catch (error) {
+                console.error("Error eliminando producto:", error);
+            }
+        }
+    }
 
     // Cuando cargue la página, que se carguen los productos
     window.onload = cargarCarrito;
