--- a/Modulos/categoria/vista/categorias.html
+++ b/Modulos/categoria/vista/categorias.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Módulo de Categorías</h1>
-    <form action="/categorySave" method="post">
+    <form action="/category" method="post">
         <input type="number" name="id" id="id" placeholder="ID" required> <br><br>
         <input type="text" name="name" id="name" placeholder="Nombre de la categoría" required> <br><br>
         <button type="submit">Agregar</button>
@@ -85,12 +85,8 @@
     </script>
 
     <br>
-    <br>
-    <button onclick="window.history.back()">⬅️ Regresar</button>
+    <br><input type="submit" value="Volver" onclick="location.href='/view_product'">
 
-    <!-- <br>
-    <button onclick="location.href='/view_product'">Volver</button>
-    <br> -->
 
 
 
